# RenderingGeometryProject

./: CMakeLists.txt  README.md
include/: BezierCurve.h  BezierSurface.h  Camera.h  Mesh.h  Renderer.h  Shader.h  Utils.h
shaders/: basic.frag  line.frag  normal.frag  normal.geom  phong.frag  surface.frag  surface.vert
src/: BezierCurve.cpp  BezierSurface.cpp  Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  main.cpp
